--- a/public/css/menu.less
+++ b/public/css/menu.less
@@ -2,34 +2,26 @@
 @import "colors.less";
 @import "grid/variables.less";
 
-.menu {
+.main-menu {
     background-color: @secondaryBGColor;
     font-size: 12pt;
     &, & * {
         color: @secondaryFontColor;
     }
 
-    .main-items > .item {
-        padding: 10px 20px;
+    & > .item {
         display: inline-block;
         position: relative;
-        &.call-to-action {
-            padding: 6px 20px;
-            float: right;
-
-        }
     }
 
     .sub-items {
         position: absolute;
-        background-color: @secondaryBGColor;
         top: 100%;
         left: 0px;
         display: none;
         z-index: 1;
 
         & > .item {
-            padding: 10px 20px;
             a {
                 white-space: nowrap;
             }
@@ -49,27 +41,13 @@
     }
 }
 
-.call-to-action {
-    clear: both;
-    margin: 5px;
-    font-size: 10pt;
-    border-radius: 5px;
-    background-color: lighten(@secondaryBGColor, 10%);
-    &:hover {
-        background-color: lighten(@secondaryBGColor, 15%);
-    }
-    &:active {
-        background-color: lighten(@secondaryBGColor, 5%);
-    }
-}
-
 #footer .main-items {
     text-align: center;
 }
 
 @media (min-width: (@small-width + 1)) {
-    .menu {
-        .main-items > .item {
+    .main-menu {
+        & > .item {
             &:hover .sub-items {
                 display: block;
             }
@@ -78,7 +56,7 @@
 }
 
 @media (max-width: @small-width) {
-    .menu {
+    .main-menu {
         #open-mobile-menu {
             position: absolute;
             right: 15px;
