--- a/public/css/main.css
+++ b/public/css/main.css
@@ -123,12 +123,14 @@ aside.cta {
   left: 0px;
   display: none;
   z-index: 1;
+  background-color: #334273;
+  padding: 0.6em;
+}
+.main-menu .sub-items > .item {
+  padding: 2px 0;
 }
 .main-menu .sub-items > .item a {
   white-space: nowrap;
-}
-.main-menu .item.current {
-  background-color: #435696;
 }
 @media (min-height: 300px) {
   header.sticky-nav {
@@ -146,6 +148,13 @@ aside.cta {
   }
 }
 @media (max-width: 48rem) {
+  .main-menu {
+    min-height: 50px;
+    padding-top: 50px;
+    display: none;
+    background-color: #334273;
+    z-index: 10;
+  }
   .main-menu #open-mobile-menu {
     position: absolute;
     right: 15px;
@@ -178,37 +187,29 @@ aside.cta {
   .main-menu #open-mobile-menu .lines::after {
     bottom: -9px;
   }
-  .main-menu .container {
-    min-height: 50px;
-  }
-  .main-menu .container .main-items {
-    padding-top: 50px;
-    display: none;
-    background-color: #334273;
-    z-index: 10;
-  }
-  .main-menu .container .main-items .item {
+  .main-menu .item {
     display: block;
+    margin: 0.5em 0;
   }
-  .main-menu .container .main-items .item .show-sub-items {
+  .main-menu .item .show-sub-items {
     width: 10px;
     height: 10px;
     border-right: 2px solid #fff;
     border-bottom: 2px solid #fff;
     position: absolute;
-    right: 15px;
-    top: 13px;
+    right: 1em;
+    top: 0.2em;
     transform: rotate(45deg);
     cursor: pointer;
   }
-  .main-menu .container .sub-items {
+  .main-menu .sub-items {
     position: relative;
     top: 0;
   }
-  .main-menu .container .sub-items.open {
+  .main-menu .sub-items.open {
     display: block;
   }
-  .main-menu.open .container .main-items {
+  .main-menu.open {
     display: block;
   }
 }
@@ -301,7 +302,6 @@ ul.cat-details li:after {
   float: left;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
-  padding: 0 2em;
   margin: 1em 0;
   width: 30%;
 }
@@ -379,18 +379,33 @@ ul.cat-details li:after {
   border-radius: 5px;
 }
 @font-face {
-  font-family: "Open Sans";
-  src: url(../fonts/open-sans-v17-latin/open-sans-v17-latin-regular.woff);
+  font-family: "Handlee";
+  src: url(../fonts/Handlee-Regular.ttf);
 }
 @font-face {
   font-family: "Handlee";
-  src: url(../fonts/handlee/Handlee-Regular.ttf);
+  font-style: normal;
+  font-weight: 400;
+  font-display: auto;
+  src: url(../fonts/Handlee-Regular.eot);
+  src: url(../fonts/Handlee-Regular.eot?#iefix) format("embedded-opentype"), url(../fonts/Handlee-Regular.woff2) format("woff2"), url(../fonts/Handlee-Regular.woff) format("woff"), url(../fonts/Handlee-Regular.ttf) format("truetype"), url(../fonts/Handlee-Regular.svg) format("svg");
+}
+@font-face {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-display: auto;
+  src: url(../fonts/OpenSans-Regular.eot);
+  src: url(../fonts/OpenSans-Regular.eot?#iefix) format("embedded-opentype"), url(../fonts/OpenSans-Regular.woff2) format("woff2"), url(../fonts/OpenSans-Regular.woff) format("woff"), url(../fonts/OpenSans-Regular.ttf) format("truetype"), url(../fonts/OpenSans-Regular.svg) format("svg");
 }
 :root {
   --light-blue: #7a80bf;
   --bg: #4e559a;
   --light-bg: rgba(255, 255, 255, 0.7);
   --cta: #e4cd2a;
+}
+* {
+  box-sizing: border-box;
 }
 html {
   /* 1rem = 10px */
@@ -504,4 +519,29 @@ footer {
 }
 footer a {
   color: white;
+}
+.hidden {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+}
+.popup {
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  left: 0;
+  top: 0;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgba(200, 200, 200, 0.8);
+}
+.popup > * {
+  max-width: 550px;
+  padding: 1em;
+  border-radius: 0.25em;
+  background-color: white;
+  margin: 1em;
 }
