--- a/public/css/main.css
+++ b/public/css/main.css
@@ -132,12 +132,14 @@ aside.cta {
   left: 0px;
   display: none;
   z-index: 1;
-  background-color: var(--light-blue);
-  padding: 0.6em;
-  margin-top: 0.3em;
   min-width: 100%;
 }
-.main-menu .sub-items > .item a {
+.main-menu .sub-items .sub-items-wrapper {
+  padding: 1rem;
+  margin-top: 0.6rem;
+  background-color: var(--light-blue);
+}
+.main-menu .sub-items .sub-items-wrapper > .item a {
   padding: 0.3rem;
   white-space: nowrap;
   color: white;
@@ -146,7 +148,7 @@ aside.cta {
   font-size: 1.6rem;
   width: 100%;
 }
-.main-menu .sub-items > .item a:hover {
+.main-menu .sub-items .sub-items-wrapper > .item a:hover {
   background: rgba(255, 255, 255, 0.5);
 }
 @media (min-height: 300px) {
