--- a/public/css/main.less
+++ b/public/css/main.less
@@ -96,13 +96,13 @@ a:hover {
     text-shadow:0.1rem 0.1rem 0.1rem var(--bg);
 }
 
-.components img {
+img {
     width:20rem;
-    box-shadow:0 0 0.1rem var(--bg);
-    border-radius:0.3rem;
+    box-shadow:0 0 .2rem .1rem var(--cta);
+    border-radius: .3rem;
 }
 
-.components input {
+.components input, .userform input {
     border:0.1rem solid var(--bg);
     border-radius:0.3rem;
     background:var(--light-bg);
@@ -110,13 +110,18 @@ a:hover {
 }
 
 .components button {
-    background: #e4cd2a;
+    background: var(--cta);
     border: 1px solid #867818;
-    border-radius: 5px;
+    border-radius: 0.3rem;
     text-transform: uppercase;
     padding: 0.5rem 1rem;
     margin-top: 1rem;
-    cursor:pointer;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+    &:hover {
+        border-color: var(--cta);
+    }
 }
 
 
