--- a/public/css/main.less
+++ b/public/css/main.less
@@ -2,6 +2,7 @@
 @import "menu.less";
 @import "search.less";
 @import "form.less";
+@import "blog.less";
 
 @font-face {
     font-family: "Handlee";
