--- a/public/css/menu.less
+++ b/public/css/menu.less
@@ -48,7 +48,7 @@
             font-size: 1.6rem;
             width: 100%;
             &:hover {
-                background: rgba(255, 255, 255, .5);
+                background: lighten(#7a80bf, 5%);
             }
         }
     }
@@ -76,7 +76,7 @@
                     & > .item a {
                         background-color: var(--light-blue);
                         &:hover {
-                            background: rgba(255, 255, 255, .5);
+                            background: lighten(#7a80bf, 5%);
                         }
                     }
                 }
