--- a/public/css/blog.less
+++ b/public/css/blog.less
@@ -32,6 +32,18 @@
         }
     }
 }
+aside {
+    article {
+        border-bottom: 1px solid var(--bg);
+        padding-bottom: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h4 {
+            text-align: center;
+        }
+    }
+}
 .article-list {
     .blog-article {
         align-items: center;
