--- a/public/css/main.less
+++ b/public/css/main.less
@@ -111,7 +111,7 @@ img {
     padding:0.5rem 1rem;
 }
 
-.components button, .userform button {
+.components button, .userform button, a.button {
     background: var(--cta);
     border: 1px solid #867818;
     border-radius: 0.3rem;
@@ -121,7 +121,9 @@ img {
     cursor: pointer;
     text-decoration: none;
     color: black;
+    font-weight: 100;
     &:hover {
+        text-shadow: none;
         border-color: var(--cta);
     }
 }
